Mitigate JVM limits for Servant